--- a/.gitattributes
+++ b/.gitattributes
@@ -1,1 +1,2 @@
 lightning_logs/epoch=475-step=23799.ckpt filter=lfs diff=lfs merge=lfs -text
+data/conll03/trimmed.300d.Cased.txt filter=lfs diff=lfs merge=lfs -text
